--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ android {
     }
 }
 
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -31,6 +32,6 @@ dependencies {
     implementation('com.github.thekhaeng:pushdown-anim-click:1.1.1') {
         exclude group: 'com.android.support'
     }
-
+    implementation 'com.agrawalsuneet.androidlibs:dotsloader:1.4'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
