--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
         exclude group: 'com.android.support'
     }
     implementation 'com.agrawalsuneet.androidlibs:dotsloader:1.4'
+    implementation 'com.agrawalsuneet.androidlibs:dotsloader:1.4'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
